argocd/aws/175678591974/clusters/oncokb-research/apps/ingress/oncokb_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oncokb
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`demo.oncokb.org`)
      services:
        - name: oncokb-core-demo
          port: 80
    - kind: Rule
      match: Host(`public.api.oncokb.org`)
      middlewares:
        - name: uablock-agentic-crawlers
      services:
        - name: oncokb-core-public
          port: 80
    - kind: Rule
      match: Host(`sop.oncokb.org`)
      services:
        - name: oncokb-sop
          port: 4321
    - kind: Rule
      match: Host(`curation.oncokb.org`)
      services:
        - name: oncokb-curation
          port: 9090
    - kind: Rule
      match: Host(`agcc.oncokb.org`)
      services:
        - name: agentic-cancer-gene-classification
          port: 8000
    - kind: Rule
      match: Host(`keycloak.oncokb.org`)
      services:
        - name: keycloak-v2-http
          port: 80
    - kind: Rule
      match: Host(`keycloakv2.oncokb.org`)
      services:
        - name: keycloak-v2-http
          port: 80
    - kind: Rule
      match: Host(`beta.keycloak.oncokb.org`)
      services:
        - name: keycloak-beta-http
          port: 80
    - kind: Rule
      match: Host(`staging.oncokb.org`)
      middlewares:
        - name: uablock-agentic-crawlers
      services:
        - name: oncokb-public-staging
          port: 9095
    - kind: Rule
      match: Host(`preview.oncokb.org`)
      middlewares:
        - name: uablock-agentic-crawlers
      services:
        - name: oncokb-public-preview
          port: 9095
    - kind: Rule
      match: Host(`www.oncokb.org`)
      middlewares:
        - name: uablock-agentic-crawlers
      services:
        - name: oncokb-public
          port: 9095
    - kind: Rule
      match: Host(`transcript.oncokb.org`)
      services:
        - name: oncokb-transcript
          port: 9090
    - kind: Rule
      match: Host(`airflow.oncokb.org`)
      services:
        - name: oncokb-airflow-web
          port: 8080
  tls:
    secretName: oncokb-cert-secret
